--- a/stylesite.css
+++ b/stylesite.css
@@ -3,7 +3,7 @@
 
     color: blue;
     font-size: 88px;
-    font-family:Sinhala Sangam MN;
+    font-family:Comic Sans MS;
     text-align: center;
 
   }
