--- a/stylesite.css
+++ b/stylesite.css
@@ -1,7 +1,7 @@
 
 #ueberschrift{
 
-    color: blue;
+    color: #4353B3;
     font-size: 88px;
     font-family:Comic Sans MS;
     text-align: center;
@@ -18,3 +18,101 @@
   display:block;
 
   }
+
+
+  /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+  .active, .accordion:hover {
+    background-color: #ccc;
+  }
+
+  /* Style the accordion panel. Note: hidden by default */
+  .panel {
+    padding: 0 18px;
+    background-color: white;
+    display: none;
+    overflow: hidden;
+  }
+
+  /* Style the tab */
+  .tab {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+  }
+
+  /* Style the buttons that are used to open the tab content */
+  .tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+  }
+
+  /* Change background color of buttons on hover */
+  .tab button:hover {
+    background-color: #ddd;
+  }
+
+  /* Create an active/current tablink class */
+  .tab button.active {
+    background-color: #ccc;
+  }
+
+  /* Style the tab content */
+  .tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+
+  }
+
+
+#socialmedia{
+
+color: #4353B3;
+font-size: 33px;
+font-family:Comic Sans MS;
+
+}
+
+#contact{
+
+color: #4353B3;
+font-size: 33px;
+font-family:Comic Sans MS;
+
+}
+
+#aboutme{
+
+color: #4353B3;
+font-size: 33px;
+font-family:Comic Sans MS;
+
+}
+
+#gallery{
+
+color: #4353B3;
+font-size: 33px;
+font-family:Comic Sans MS;
+
+}
+
+#sm2{
+
+color: green;
+font-size: 44px;
+
+}
+
+#sm3{
+
+  color: orange;
+  font-size: 33px;
+
+}
