--- a/stylesite.css
+++ b/stylesite.css
@@ -12,7 +12,7 @@
 #instagram{
 
   height:auto;
-  width:25%;
+  width:10%;
   text-align:middle;
   display:block;
 
@@ -20,7 +20,7 @@
 #facebook{
 
   height:auto;
-  width:25%;
+  width:10%;
   text-align:middle;
   display:block;
 
@@ -166,4 +166,61 @@ font-size: 44px;
   margin-right: auto;
   width:50%;
 
+}
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: Arial;
+}
+
+/* The grid: Four equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 15%;
+  padding: 10px;
+}
+
+/* Style the images inside the grid */
+.column img {
+  opacity: 0.8;
+  cursor: pointer;
+}
+
+.column img:hover {
+  opacity: 1;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* The expanding image container */
+.container {
+  position: relative;
+  display: none;
+}
+
+/* Expanding image text */
+#imgtext {
+  position: absolute;
+  bottom: 15px;
+  left: 460px;
+  color: white;
+  font-size: 20px;
+}
+
+/* Closable button inside the expanded image */
+.closebtn {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  color: white;
+  font-size: 35px;
+  cursor: pointer;
 }
