--- a/stylesite.css
+++ b/stylesite.css
@@ -44,38 +44,54 @@
   .tab {
     overflow: hidden;
     border: 1px solid #ccc;
-    background-color: #f1f1f1;
+    background-color: #13376F;
   }
 
   /* Style the buttons that are used to open the tab content */
   .tab button {
     background-color: inherit;
-    float: left;
+    float: center;
     border: none;
     outline: none;
     cursor: pointer;
     padding: 14px 16px;
-    transition: 0.3s;
+    transition: 1,5s;
   }
 
   /* Change background color of buttons on hover */
   .tab button:hover {
-    background-color: #ddd;
+    background-color: #8A9FD3;
   }
 
   /* Create an active/current tablink class */
   .tab button.active {
-    background-color: #ccc;
+    background-color: #8A9FD3;
   }
 
   /* Style the tab content */
   .tabcontent {
     display: none;
     padding: 6px 12px;
-    border: 1px solid #ccc;
+    border: 2px solid #ccc;
     border-top: none;
 
   }
+
+
+.tablinks{
+
+  color: black;
+  font-size: 22px;
+  font-family:Comic Sans MS;
+
+}
+
+
+
+
+
+
+
 
 
 #socialmedia{
@@ -166,6 +182,10 @@ font-size: 44px;
   margin-right: auto;
   width:50%;
 
+
+
+
+
 }
 * {
   box-sizing: border-box;
@@ -223,29 +243,4 @@ body {
   color: white;
   font-size: 35px;
   cursor: pointer;
-}
-
-/* Das Kontaktformular */
-form {
-  background-color: #eee;
-  width: 370px; /* Breite des Formulars */
-  padding: 20px;
-  border: 1px solid #8c8c8c;
-}
-label { /* Beschriftung auf eigener Zeile */
-  display: block;
-  cursor: pointer; /* Mauszeiger wird zur Hand */
-}
-input#absender,
-textarea {
-  width: 300px;
-  border: 1px solid #8c8c8c;
-  margin-bottom: 1em;
-}
-textarea {
-  height: 7em;
-}
-input:focus,
-textarea:focus {
-  background-color: #d9d9d9;
 }
