--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ background-size:22vw;
   background-size: 44vw;
 }
 #Lissabon{
-background-image: url(./image/lissabon1.jpg);
+background-image: url(./image/lissabon1.JPG);
   background-size: 44vw;
 }
 #Chiemsee{
